--- a/NEON_manuscript/Case studies/mvgam_case_study2.Rmd
+++ b/NEON_manuscript/Case studies/mvgam_case_study2.Rmd
@@ -1,10 +1,11 @@
 ---
 title: "mvgam case study 2: multivariate models"
+author: Nicholas Clark (n.clark@uq.edu.au)
 output:
-  pdf_document:
-    highlight: zenburn
   html_document:
     df_print: paged
+  pdf_document:
+    highlight: zenburn
 urlcolor: blue
 ---
 
@@ -30,7 +31,7 @@ trends <- gtrendsR::gtrends(terms, geo = "AU-QLD",
                             time = "all", onlyInterest = T)
 ```
 
-Google Trends modified their algorithm in 2012, so we filter the series to only include observations after this point in time
+`Google Trends` modified their algorithm for extracting search volume data in 2012, so we filter the series to only include observations after this point in time
 ```{r}
 trends$interest_over_time %>%
   tidyr::spread(keyword, hits) %>%
@@ -41,22 +42,18 @@ trends$interest_over_time %>%
   dplyr::select(-year) -> gtest
 ```
 
-Convert to an `xts` object and then to the required `mvgam` format
+Convert to an `xts` object and then to the required `mvgam` format, holding out the final 10% of observations as the test data
 ```{r}
 series <- xts::xts(x = gtest[,-1], order.by = gtest$date)
 trends_data <- series_to_mvgam(series, freq = 12, train_prop = 0.9)
 ```
 
-Plot the series to see how their seasonal shapes are quite similar over time
+Plot the series to see how similar their seasonal shapes are over time
 ```{r, fig.width = 6, fig.height = 4, fig.align='center'}
 plot(series, legend.loc = 'topleft')
 ```
 
-```{r echo = F}
-#load('trends_models.rda')
-```
-
-Now we will fit an `mvgam` model with shared seasonality and random intercepts per series. Another advantage of using `JAGS` for sampling is that we can implement truncated likelihood functions to recognise known bounds for particular parameters. As we know that Google trends relative search volumes cannot go above `100`, we specify this as the upper bound for each series (note that these truncated likelihoods are much slower to estimate in `JAGS` so only use them if required). Here we assume the latent dynamic trends can be represented using three latent factors that each follow an `AR3` process, and we assume a Negative Binomial distrubution for the response
+Now we will fit an `mvgam` model with shared seasonality and random intercepts per series. An advantage of using `JAGS` for sampling is that we can implement truncated likelihood functions to recognise known bounds for particular parameters. As we know that `Google trends` relative search volumes cannot go above `100`, we specify this as the upper bound for each series (note that these truncated likelihoods are much slower to estimate in `JAGS` so only use them if required). Here we assume the dynamic trends can be represented using three latent factors that each follow an `AR3` process, and we assume a Negative Binomial distrubution for the response. At present each series is presumed to show the same degree of overdispersion, but this assumption will be relaxed in future versions
 ```{r}
 trends_mod <- mvjagam(data_train = trends_data$data_train,
                       data_test = trends_data$data_test,
@@ -67,13 +64,16 @@ trends_mod <- mvjagam(data_train = trends_data$data_train,
                       trend_model = 'AR3',
                       n_lv = 3,
                       family = 'nb',
-                      n.burnin = 1000,
-                      n.iter = 1000, 
-                      thin = 1,
+                      n.burnin = 10,
+                      n.iter = 100,
                       upper_bounds = rep(100, length(terms)),
                       auto_update = F)
 ```
 
+Have a look at the returned `JAGS` model file to see how the dynamic factors are incorporated. Notice that the precisions of factors, together with each factor's set of loadings, are penalised using a regularised horseshoe prior. This should hopefully protect against specifying too large a number of factors than is needed to represent dependent temporal dynamics
+```{r}
+trends_mod$model_file
+```
 
 Given that these series could potentially be following a hierarchical seasonality, we will also trial a slghtly more complex model with an extra smoothing term per series that allows its seasonal curve to deviate from the global seasonal smooth
 ```{r}
@@ -87,9 +87,7 @@ trends_mod2 <- mvjagam(data_train = trends_data$data_train,
                       trend_model = 'AR3',
                       n_lv = 3,
                       family = 'nb',
-                      n.burnin = 1000,
-                      n.iter = 1000, 
-                      thin = 1,
+                      n.burnin = 10000,
                       upper_bounds = rep(100, length(terms)),
                       auto_update = F)
 ```
@@ -100,7 +98,14 @@ compare_mvgams(trends_mod, trends_mod2, fc_horizon = 3,
                n_cores = 3, n_evaluations = 10)
 ```
 
-Model 1 (with shared seasonality) is slightly preferred, suggesting there is not sufficient evidence that the variation in the seasonal curves for these series is useful for forecasting. Look at Dunn-Smyth residuals for some series from this preferred model
+Model 1 (with shared seasonality) is slightly preferred, suggesting there is not sufficient evidence that the variation in the seasonal curves for these series may not be useful for forecasting. This is likely because the noisiness of these series makes it difficult to estimate their individual seasonanl patterns, while any fluctuations through time can be more readily captured by the flexibility of the latent trends.
+
+Inspect the model summary (note again that p-value approximations are a work in progress here and so may not be totally reliable).
+```{r}
+summary_mvgam(trends_mod)
+```
+
+Look at Dunn-Smyth residuals for some series from this preferred model to ensure the Negative Binomial is appropriate and that our dynamic factor process has captured most of the temporal dependencies in the observations
 ```{r, fig.width = 7, fig.height = 7, fig.align='center'}
 plot_mvgam_resids(trends_mod, 1)
 ```
@@ -117,6 +122,23 @@ plot_mvgam_resids(trends_mod, 3)
 plot_mvgam_resids(trends_mod, 4)
 ```
 
+Perform posterior predictive checks to see if the model is able to simulate data that looks realistic and unbiased by examining simulated kernel densities for posterior predictions (`yhat`) compared to the density of the observations (`y`). This will be particularly useful for examining whether the shared overdispersion parameter is able to produce realistic looking simulations for each individual series.
+```{r, fig.width = 5, fig.height = 4, fig.align='center'}
+plot_mvgam_ppc(trends_mod, series = 1, type = 'density')
+```
+
+```{r, fig.width = 5, fig.height = 4, fig.align='center'}
+plot_mvgam_ppc(trends_mod, series = 2, type = 'density')
+```
+
+```{r, fig.width = 5, fig.height = 4, fig.align='center'}
+plot_mvgam_ppc(trends_mod, series = 3, type = 'density')
+```
+
+```{r, fig.width = 5, fig.height = 4, fig.align='center'}
+plot_mvgam_ppc(trends_mod, series = 4, type = 'density')
+```
+
 Look at traceplots for the smoothing parameters (`rho`) and latent trend parameters
 ```{r, fig.width = 6, fig.height = 4, fig.align='center'}
 plot_mvgam_trace(object = trends_mod, param = 'rho')
@@ -126,7 +148,7 @@ plot_mvgam_trace(object = trends_mod, param = 'rho')
 plot_mvgam_trace(object = trends_mod, param = 'trend')
 ```
 
-Plot posterior predictive distributions for the training and testing periods
+Plot posterior predictive distributions for the training and testing periods for each series
 ```{r, fig.width = 6, fig.height = 4, fig.align='center'}
 plot_mvgam_fc(object = trends_mod, series = 1, data_test = trends_data$data_test)
 ```
@@ -165,8 +187,7 @@ Given that we fit a model with a shared seasonal pattern, the seasonal smooths f
 plot_mvgam_smooth(object = trends_mod, series = 1, smooth = 'season')
 ```
 
-
-Plot posterior median estimates of latent trend correlations
+Plot posterior mean estimates of latent trend correlations. These correlations are more useful than looking at latent factor loadings, for example to inspect ordinations. This is because the orders of the loadings (although constrained for identifiability purposes) can vary from chain to chain
 ```{r}
 correlations <- lv_correlations(object = trends_mod)
 ```
@@ -188,7 +209,7 @@ ggplot(mean_correlations %>%
   theme(axis.text.x = element_text(angle = 45, hjust=1))
 ```
 
-There is certainly some evidence of positive trend correlations for a few of these search terms, which is not surprising. Plot some STL decompositions of these series to see if these trends are noticeable in the data
+There is certainly some evidence of positive trend correlations for a few of these search terms, which is not surprising given how similar some of them are and how closely linked they should be to interest about tick paralysis in Queensland. Plot some STL decompositions of these series to see if these trends are noticeable in the data
 ```{r, fig.align='center', fig.width=6, fig.height=4, message=FALSE}
 plot(stl(ts(as.vector(series$`tick paralysis`), frequency = 12), 'periodic'))
 plot(stl(ts(as.vector(series$`paralysis tick dog`), frequency = 12), 'periodic'))
@@ -196,51 +217,5 @@ plot(stl(ts(as.vector(series$`dog tick`), frequency = 12), 'periodic'))
 plot(stl(ts(as.vector(series$`tick bite`), frequency = 12), 'periodic'))
 ```
 
-We have seen in other case studies how useful the recursive particle filter is for online assimilation of new observations, meaning that our forecasts can adapt without needing to re-estimate the model. For multivariate series, the particles' weights are governed by a composite multivariate likelihood, which should give us a good forecast overall but could of course lead to improvements for one series at the expense of another. Let's investigate this behaviour here. Initiate `10000` particles by assimilating the next observation in `data_test`
-```{r}
-pfilter_mvgam_init(object = trends_mod,
-                   data_assim = trends_data$data_test,
-                   n_particles = 10000, n_cores = 3)
-```
-
-Assimilate the next two observations per series
-```{r}
-pfilter_mvgam_online(data_assim =
-                       trends_data$data_test[1:(4 * 3),],
-                     file_path = 'pfilter', n_cores = 3,
-                     kernel_lambda = 1)
-```
-
-Forecast from particles using the covariate information in remaining `data_test` observations
-```{r}
-fc <- pfilter_mvgam_fc(file_path = 'pfilter', n_cores = 3,
-                       data_test = trends_data$data_test,
-                       return_forecasts = T)
-```
-
-Inspect forecasts for `paralysis tick dog` and overlay true values in the test horizon to see how the forecast changes over time as new observations are assimilated
-```{r}
-fc$fc_plots$`paralysis tick dog`()
-```
-
-Assimilate three more observations per series
-```{r}
-pfilter_mvgam_online(data_assim =
-                       trends_data$data_test[1:(4 * 6),],
-                     file_path = 'pfilter', n_cores = 3,
-                     kernel_lambda = 1)
-```
-
-Forecast the remaining observations
-```{r}
-fc <- pfilter_mvgam_fc(file_path = 'pfilter', n_cores = 3,
-                       data_test = trends_data$data_test,
-                       return_forecasts = T)
-fc$fc_plots$`paralysis tick dog`()
-```
-
-Remove the particles
-```{r}
-unlink('pfilter', recursive = T)
-```
+Some logical next steps for this analysis would be: trial varying overdispersion parameters for each series (the residual diagnostic plots do suggest that the estimated Negative Binomial overdispersion parameter is more suitable for some series than for others), devise a more goal-specific set of posterior predictive checks (see [this paper by Gelman et al](https://www.jstor.org/stable/2680852?seq=1#metadata_info_tab_contents) and [relevant works by Betancourt](https://betanalpha.github.io/assets/case_studies/principled_bayesian_workflow.html) for examples), compare out of sample Discrete Rank Probability Scores and PIT histograms for this model and simpler versions for the latent trends (i.e. AR2, AR1, Random Walk)
 
