--- a/docs/README.Rmd
+++ b/docs/README.Rmd
@@ -67,30 +67,27 @@ lynx_mvgam <- mvjagam(data_train = lynx_train,
                auto_update = F)
 ```
 
-Calculate the out of sample forecast from the fitted `mvgam` model and visualise. All of the following plots show 95% and 68% highest posterior density credible intervals (shaded regions) as well as the posterior median (dashed line)
-```{r, fig.width=5, fig.height=4, fig.align='center'}
-fits <- MCMCvis::MCMCchains(lynx_mvgam$jags_output, 'ypred')
-fits <- fits[,(NROW(lynx_mvgam$obs_data)+1):(NROW(lynx_mvgam$obs_data)+10)]
-cred_ints <- apply(fits, 2, function(x) hpd(x, 0.95))
-plot(cred_ints[3,] ~ seq(1:NCOL(cred_ints)), type = 'l',
-     col = rgb(1,0,0, alpha = 0),
-     ylim = c(0, max(lynx_full$population) * 1.25),
-     ylab = '',
-     xlab = 'Forecast horizon',
-     main = 'mvgam')
-polygon(c(seq(1:(NCOL(cred_ints))), rev(seq(1:NCOL(cred_ints)))),
-        c(cred_ints[1,],rev(cred_ints[3,])),
-        col = rgb(150, 0, 0, max = 255, alpha = 100), border = NA)
-cred_ints <- apply(fits, 2, function(x) hpd(x, 0.68))
-polygon(c(seq(1:(NCOL(cred_ints))), rev(seq(1:NCOL(cred_ints)))),
-        c(cred_ints[1,],rev(cred_ints[3,])),
-        col = rgb(150, 0, 0, max = 255, alpha = 180), border = NA)
-lines(cred_ints[2,], col = rgb(150, 0, 0, max = 255), lwd = 2, lty = 'dashed')
-points(lynx_test$population[1:10], pch = 16)
-lines(lynx_test$population[1:10])
+Perform a series of posterior predictive checks to see if the model is able to simulate data for the training period that looks realistic and unbiased. First, examine simulated kernel densities for posterior predictions (`yhat`) and compare to the density of the observations (`y`)
+```{r, fig.width = 5, fig.height = 4, fig.align='center'}
+plot_mvgam_ppc(lynx_mvgam, series = 1, type = 'density')
 ```
 
-All out of sample observations falling within the model's 95% credible intervals. Have a look at this model's summary to see what is being estimated (note that longer MCMC runs would probably be needed to increase effective sample sizes)
+Now plot the distribution of predicted means compared to the observed mean
+```{r, fig.width = 5, fig.height = 4, fig.align='center'}
+plot_mvgam_ppc(lynx_mvgam, series = 1, type = 'mean')
+```
+
+Next examine simulated empirical Cumulative Distribution Functions (CDF) for posterior predictions (`yhat`) and compare to the CDF of the observations (`y`)
+```{r, fig.width = 5, fig.height = 4, fig.align='center'}
+plot_mvgam_ppc(lynx_mvgam, series = 1, type = 'cdf')
+```
+
+Finally look for any biases in predictions by examining a Probability Integral Transform (PIT) histogram. If our predictions are not biased one way or another (i.e. not consistently under- or over-predicting), this histogram should look roughly uniform
+```{r, fig.width = 5, fig.height = 4, fig.align='center'}
+plot_mvgam_ppc(lynx_mvgam, series = 1, type = 'pit')
+```
+
+All of these plots indicate the model is well calibrated against the training data, with no apparent pathological behaviors exhibited. Have a look at this model's summary to see what is being estimated (note that longer MCMC runs would probably be needed to increase effective sample sizes)
 ```{r}
 summary_mvgam(lynx_mvgam)
 ```
@@ -100,7 +97,7 @@ Inspect the model's estimated smooth for the 19-year cyclic pattern. Note that t
 plot_mvgam_smooth(lynx_mvgam, 1, 'season')
 ```
 
-We can also view the mvgam's posterior predictions for the entire series (testing and training)
+We can also view the mvgam's posterior retrodictions and predictions for the entire series (testing and training)
 ```{r, fig.width=5, fig.height=4, fig.align='center'}
 plot_mvgam_fc(lynx_mvgam, data_test = lynx_test)
 ```
@@ -108,6 +105,23 @@ plot_mvgam_fc(lynx_mvgam, data_test = lynx_test)
 And the estimated latent trend component
 ```{r, fig.width=5, fig.height=4, fig.align='center'}
 plot_mvgam_trend(lynx_mvgam, data_test = lynx_test)
+```
+
+We can also re-do the posterior predictive checks, but this time focusing only on the out of sample period. This will give us better insight into how the model is performing and whether it is able to simulate realistic and unbiased future values
+```{r, fig.width = 5, fig.height = 4, fig.align='center'}
+plot_mvgam_ppc(lynx_mvgam, series = 1, type = 'density', data_test = lynx_test)
+```
+
+```{r, fig.width = 5, fig.height = 4, fig.align='center'}
+plot_mvgam_ppc(lynx_mvgam, series = 1, type = 'mean', data_test = lynx_test)
+```
+
+```{r, fig.width = 5, fig.height = 4, fig.align='center'}
+plot_mvgam_ppc(lynx_mvgam, series = 1, type = 'cdf', data_test = lynx_test)
+```
+
+```{r, fig.width = 5, fig.height = 4, fig.align='center'}
+plot_mvgam_ppc(lynx_mvgam, series = 1, type = 'pit', data_test = lynx_test)
 ```
 
 A key aspect of ecological forecasting is to understand [how different components of a model contribute to forecast uncertainty](https://esajournals.onlinelibrary.wiley.com/doi/full/10.1002/eap.1589). We can estimate relative contributions to forecast uncertainty for the GAM component and the latent trend component using `mvgam`
