--- a/NEON_manuscript/Case studies/mvgam_case_study1.Rmd
+++ b/NEON_manuscript/Case studies/mvgam_case_study1.Rmd
@@ -210,6 +210,7 @@ mod3 <- mvjagam(data_train = fake_data$data_train,
                knots = list(season = c(0.5, 12.5)),
                family = 'nb',
                trend_model = 'AR3',
+               drift = TRUE,
                n.burnin = 3000,
                auto_update = F)
 ```
@@ -264,6 +265,7 @@ mod4 <- mvjagam(data_train = fake_data$data_train,
                formula = y ~ s(fake_cov, k = 3),
                family = 'poisson',
                trend_model = 'RW',
+               drift = TRUE,
                n.burnin = 3000,
                auto_update = F)
 ```
